<resources>
    <string name="app_name">亿社区</string>

    <!-- 首页模块 -->
    <string name="community">社区</string>
    <string name="steward">管家</string>
    <string name="neighbour">邻里</string>
    <string name="mine">我的</string>
    <string name="zuolinyouli">左邻右里</string>
    <string name="publish">发布</string>


    <!-- 管家模块 -->
    <string name="add_house">添加房屋</string>
    <string name="smart_home">智能家居</string>
    <string name="smart_door">智慧门禁</string>
    <string name="smart_park">智慧停车</string>
    <string name="property_service">物业服务</string>

    <!-- 房屋模块 -->
    <string name="personnel_identity">人员身份</string>
    <string name="personnel_information">个人信息</string>
    <string name="proprietor">业主</string>
    <string name="relative">家属</string>
    <string name="tenant">租客</string>
    <string name="name">姓　名：</string>
    <string name="identity_card">身份证：</string>
    <string name="house_information">房屋信息</string>
    <string name="area">区域：</string>
    <string name="xiaoqu">小区：</string>
    <string name="submit">提交</string>
    <string name="hint_name">请填写真实姓名，以便小区物业审核</string>
    <string name="hint_idcard">请填写正确身份证号码</string>
    <string name="building">楼栋：</string>
    <string name="unit">单元：</string>
    <string name="floor">楼层：</string>
    <string name="room_number">房号：</string>

    <!--车卡管理-->
    <string name="car_card_name">姓名： %1$s</string>
    <string name="phone">电话： %1$s</string>
    <string name="parking">车位： %1$s</string>
    <string name="term_of_validity">到期时间： %1$s</string>
    <string name="surplus_days">还有%1$s天</string>
    <string name="apply_card_result">您申请的%1$s正在审核中</string>

    <!--city picker-->
    <string name="cp_select_city">选择城市</string>
    <string name="cp_used_city">最近访问城市</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="cp_located_city">定位城市</string>
    <string name="cp_hint_search_box">请输入城市名或拼音</string>
    <string name="cp_nothing_found">没有搜索结果~</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_located_failed">定位失败</string>

    <!--Launch模块-->
    <string name="login">登录</string>

    <!--反馈-->
    <string name="feedback">请填写反馈信息</string>
    <string name="feedback_hint">请写下您的宝贵意见</string>

    <!--投诉模块-->
    <string name="select_community">请选择小区</string>
    <string name="contacts">联系人</string>
    <string name="contact_information">联系方式</string>
    <string name="opinion">意见</string>

    <!--车牌号归属地-->
    <string name="car_city_json">{"carCityList":[{"province":"北京市","shortfrom":"京"},{"province":"上海市","shortfrom":"沪"},{"province":"天津市","shortfrom":"津"},{"province":"重庆市","shortfrom":"渝"},{"province":"河北省","shortfrom":"冀"},{"province":"山西省","shortfrom":"晋"},{"province":"辽宁省","shortfrom":"辽"},{"province":"吉林省","shortfrom":"吉"},{"province":"黑龙江省","shortfrom":"黑"},{"province":"江苏省","shortfrom":"苏"},{"province":"浙江省","shortfrom":"浙"},{"province":"安徽省","shortfrom":"皖"},{"province":"福建省","shortfrom":"闽"},{"province":"江西省","shortfrom":"赣"},{"province":"山东省","shortfrom":"鲁"},{"province":"河南省","shortfrom":"豫"},{"province":"湖北省","shortfrom":"鄂"},{"province":"湖南省","shortfrom":"湘"},{"province":"广东省","shortfrom":"粤"},{"province":"海南省","shortfrom":"琼"},{"province":"四川省","shortfrom":"川"},{"province":"贵州省","shortfrom":"贵"},{"province":"云南省","shortfrom":"云"},{"province":"陕西省","shortfrom":"陕"},{"province":"甘肃省","shortfrom":"甘"},{"province":"青海省","shortfrom":"青"},{"province":"内蒙古自治区","shortfrom":"蒙"},{"province":"广西壮族自治区","shortfrom":"桂"},{"province":"西藏自治区","shortfrom":"藏"},{"province":"宁夏回族自治区","shortfrom":"宁"},{"province":"新疆维吾尔自治区","shortfrom":"新"},{"province":"香港特别行政区","shortfrom":"港"},{"province":"澳门特别行政区","shortfrom":"澳"},{"province":"台湾","shortfrom":"台"}]}</string>

    <!--物业缴费-->
    <string name="deal_success">交易成功</string>
    <string name="payment_method">付款方式</string>
    <string name="payment_instructions">缴费说明</string>
    <string name="payment_number">户　　号</string>
    <string name="creat_time">创建时间</string>

    <!--提示语-->
    <string name="input_right_carNo_please">请输入正确的车牌号</string>
    <string name="input_right_name_please">请输入正确的姓名</string>
    <string name="input_right_phone_please">请输入正确的联系方式</string>

    <string name="select_park_please">请选择停车场</string>
    <string name="select_month_count_please">请选择预缴月数</string>

    <!--社区服务-->
    <string name="contact_now">马上联系</string>
    <string name="introduction_of_firm">商家介绍</string>
    <string name="age_of_firm">商家年龄</string>
    <string name="scope_of_service">服务范围</string>
    <string name="address_of_firm">商户地址</string>
    <string name="office_hours">营业时间</string>
    <string name="contact_details">联系方式</string>
    <string name="firm_live">商家实景</string>
    <string name="business_license">营业执照</string>
    <string name="introduction_of_service">服务介绍</string>
    <string name="certified">已认证</string>

    <!--临时密码-->
    <string name="created_password">本次生成密码</string>
    <string name="qr_digit">二维码或数字</string>
    <string name="create_digit_password">生成数字密码</string>
    <string name="send_to_friend">发送给好友</string>

    <!--服务点评-->
    <string name="services_remark_hint">亲，请确保与商家有过交易后如实评价！可填写商家服务态度，商品质量等…</string>
    <string name="remark">发表评论</string>


</resources>
