<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_grey"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/sv_steward_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/base_grey"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingTop="8dp"
                android:text="@string/personnel_identity"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_proprietor_house_fragment"
                    android:layout_width="85dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/bg_checked_red_340px_180px"
                    android:gravity="center"
                    android:tag="0"
                    android:text="@string/proprietor"
                    android:textColor="@color/base_color" />

                <TextView
                    android:id="@+id/tv_member_house_fragment"
                    android:layout_width="85dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_unchecked_gray_340px_180px"
                    android:gravity="center"
                    android:tag="1"
                    android:text="@string/member"
                    android:textColor="@color/default_text" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/base_grey"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingTop="8dp"
                android:text="@string/personnel_information"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/default_text"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_name_house_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/accent_text"
                    android:textColorHint="@color/default_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/base_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/identity_card"
                    android:textColor="@color/default_text"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_idcard_house_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_idcard"
                    android:lines="1"
                    android:textColor="@color/accent_text"
                    android:textColorHint="@color/default_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/base_grey"
                android:padding="15dp"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingTop="8dp"
                android:text="@string/house_information"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textColor="@color/default_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_area_house_fragment"
                    style="@style/AddHouseInfo" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/base_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xiaoqu"
                    android:textColor="@color/default_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_community_house_fragment"
                    style="@style/AddHouseInfo" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/base_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/building"
                    android:textColor="@color/default_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_building_house_fragment"
                    style="@style/AddHouseInfo" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/base_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    android:textColor="@color/default_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_unit_house_fragment"
                    style="@style/AddHouseInfo" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/base_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floor"
                    android:textColor="@color/default_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_floor_house_fragment"
                    style="@style/AddHouseInfo" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/base_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_number"
                    android:textColor="@color/default_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_room_number_house_fragment"
                    style="@style/AddHouseInfo" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_submit_house_fragment"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/select_submit"
                android:text="@string/submit"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
