<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:layout_marginTop="18dp">

    <LinearLayout
        android:id="@+id/ll_view_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_month_card_1017px_657px"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/tv_plate_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="粤L 2356"
                android:textColor="@color/white"

                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_surplus_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:text="还有35天"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_card_name"
                android:textColor="@color/base_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/phone"
                android:textColor="@color/base_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_parking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/parking"
                android:textColor="@color/base_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_term_of_validity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/term_of_validity"
                android:textColor="@color/base_black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>