<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_grey_300"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <in.srain.cube.views.ptr.PtrFrameLayout xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ptrFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        cube_ptr:ptr_keep_header_when_refresh="true"
        cube_ptr:ptr_pull_to_fresh="true"
        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
        cube_ptr:ptr_resistance="1.7">

        <ScrollView
            android:id="@+id/sv_steward_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView style="@style/StewardCard">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/StewardCardTitle"
                            android:text="@string/add_house" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_my_house"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layoutAnimation="@anim/layout_animation_dock_left_enter" />
                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView style="@style/StewardCard">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/StewardCardTitle"
                            android:text="@string/smart_home" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_smart_home"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layoutAnimation="@anim/layout_animation_dock_left_enter" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView style="@style/StewardCard">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/StewardCardTitle"
                            android:text="@string/smart_door" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_smart_door"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layoutAnimation="@anim/layout_animation_dock_left_enter" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView style="@style/StewardCard">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/StewardCardTitle"
                            android:text="@string/smart_park" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_smart_park"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layoutAnimation="@anim/layout_animation_dock_left_enter" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView style="@style/StewardCard">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/StewardCardTitle"
                            android:text="@string/property_service" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_property_service"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layoutAnimation="@anim/layout_animation_dock_left_enter" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </in.srain.cube.views.ptr.PtrFrameLayout>
</LinearLayout>